--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
     <!-- Slide 2 -->
     <div class="slide">
-      <img src="images/banners/built-for-clarity.jpg" alt="Slide 2">
+      <img src="images/banners/Built-for-Clarity.jpg" alt="Slide 2">
       <div class="slide-content">
         <h1>Innovative Technology</h1>
         <p>Experience seamless integration and robust analytics at your fingertips.</p>
@@ -237,7 +237,7 @@
     </div>
     <!-- Slide 3 -->
     <div class="slide">
-      <img src="images/banners/proven.jpg" alt="Slide 3">
+      <img src="images/banners/Proven.jpg" alt="Slide 3">
       <div class="slide-content">
         <h1>Boost Your Conversions</h1>
         <p>Transform visitors into loyal customers with our powerful platform.</p>
@@ -262,31 +262,31 @@
     </div>
     <div class="testimonial-container">
       <div class="testimonial active">
-        <img src="images/testimonials /Cloudmanda.jpg" alt="User 1" />
+        <img src="images/testimonials/Cloudmanda.jpg" alt="User 1" />
         <h4>Cloud Manda</h4>
         <div class="email">CloudManda@example.com</div>
         <p>"ProductPulse transformed our landing page into a conversion machine."</p>
       </div>
       <div class="testimonial">
-        <img src="images/testimonials /FaithLisomona.jpg" alt="User 2" />
+        <img src="images/testimonials/FaithLisomona.jpg" alt="User 2" />
         <h4>Faith Lisomona</h4>
         <div class="email">FaithLisomona@example.com</div>
         <p>"The design is sleek and the features are top-notch. Highly recommended!"</p>
       </div>
       <div class="testimonial">
-        <img src="images/testimonials /Emmy.jpg" alt="User 2" />
+        <img src="images/testimonials/Emmy.jpg" alt="User 2" />
         <h4>Emmy Chirwa</h4>
         <div class="email">emmy@example.com</div>
         <p>"The design is sleek and the features are top-notch. Highly recommended!"</p>
       </div>
       <div class="testimonial">
-        <img src="images/testimonials /Rabeka.jpg" alt="User 2" />
+        <img src="images/testimonials/Rabeka.jpg" alt="User 2" />
         <h4>Rabeka Musa</h4>
         <div class="email">Rabeka@example.com</div>
         <p>"The design is sleek and the features are top-notch. Highly recommended!"</p>
       </div>
       <div class="testimonial">
-        <img src="images/testimonials /Enock.jpg" alt="User 2" />
+        <img src="images/testimonials/Enock.jpg" alt="User 2" />
         <h4>Enock Liche</h4>
         <div class="email">Enock@example.com</div>
         <p>"The design is sleek and the features are top-notch. Highly recommended!"</p>
